--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,54 @@
+/* @font-face { font-family: Delicious; src: url('Delicious-Roman.otf'); }
+*/
+
+#topbar {
+  color: white;
+  background-color: black;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 20px;
+  height: 60px;
+  margin: auto 0;
+
+}
+
+#menu {
+  height: 350px;
+  width: 70%;
+  font-size: 25px;
+  text-align: center;
+  padding: 50px;
+  border: solid black 2px;
+  margin-left: 140px;
+  margin-top: 80px;
+  background-color: #d4e5ff;
+}
+
+#startgame {
+  height: 50px;
+  width: 200px;
+  font-size: 20px;
+
+}
+
 #gameboard {
   border: 5px solid black;
-  height: 500px;
+  height: 450px;
   margin: auto;
-  width: 1000px;
+  width: 800px;
   padding: 10px;
   position:relative;
   overflow:hidden;
+  margin-top: 20px;
+}
+
+#timer {
+  padding: 20px;
+  margin: 20px;
+  width: 150px;
+  border: solid black 2px;
+  background-color: #e4ffd4;
+  border-radius: 25px;
 }
 
 
@@ -21,16 +64,24 @@ h1 {
 #inputForm {
   height: 50px;
   width: 200px;
-  margin-left: 600px;
+  margin-left: 520px;
   margin-top: 10px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 
 }
 
 label {
   display: block;
-  margin-left: 600px;
+  margin-left: 530px;
   margin-top: 20px;
 
 }
 
+.playagain {
+  height: 150px;
+  width: 400px;
+  margin-left: 200px;
+  margin-top: 60px;
+  font-size: 30px;
+
+}
