--- a/css/custom.css
+++ b/css/custom.css
@@ -73,15 +73,14 @@ h1 {
 #inputForm {
   height: 50px;
   width: 200px;
-  margin-left: 520px;
+  margin-left: 600px;
   margin-top: 10px;
   margin-bottom: 50px;
-
 }
 
 label {
   display: block;
-  margin-left: 530px;
+  margin-left: 610px;
   margin-top: 20px;
 
 }
@@ -90,9 +89,17 @@ label {
   height: 150px;
   width: 400px;
   margin-left: 200px;
-  margin-top: 60px;
+  margin-top: 50px;
   font-size: 30px;
 
+}
+
+#secondlevel {
+  height: 150px;
+  width: 400px;
+  margin-left: 200px;
+  margin-top: 50px;
+  font-size: 30px;
 }
 
 background-image {
