--- a/css/custom.css
+++ b/css/custom.css
@@ -22,7 +22,8 @@ body {
   font-size: 25px;
   text-align: center;
   border: solid black 2px;
-  margin-left: 160px;
+  margin: auto;
+  position: relative;
   padding-top: 10px;
   padding-left: 40px;
   padding-right: 40px;
@@ -57,6 +58,8 @@ h2 {
   overflow:hidden;
   font-family: 'Josefin Sans', sans-serif;
   background-color: black;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 
@@ -103,9 +106,7 @@ h2 {
 #inputForm {
   height: 50px;
   width: 210px;
-  margin-left: 580px;
-  margin-top: 10px;
-  margin-bottom: 50px;
+  margin-top: 20px;
   font-family: 'Josefin Sans', sans-serif;
   font-size: 20px;
   text-transform: uppercase;
@@ -113,8 +114,9 @@ h2 {
 }
 
 label {
-  display: block;
-  margin-left: 610px;
+  display: inline-block;
+  position: relative;
+  margin-left: 700px;
   margin-top: 10px;
   font-size: 20px;
   font-family: 'Gudea', sans-serif;
@@ -140,10 +142,4 @@ label {
 
 background-image {
   max-width: 100%;
-}
-
-#gameboard {
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
 }
